# ICM42670

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang-format
ICM42670Driver/: CMakeLists.txt
ICM42670Driver/include/: ICM42670Driver.hpp  fwd.hpp
ICM42670Driver/src/: ICM42670Driver.cpp
IMUClient/: Client.py
IMUSimulator/: IMUSimulator.py
apps/: CMakeLists.txt  hardware.cpp  main.cpp
apps/include/: fwd.hpp  hardware.hpp
i2c/: CMakeLists.txt
i2c/include/: fwd.hpp  i2c.hpp
i2c/src/: i2c.cpp
